<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register_name_et"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/hint_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/register_email_et"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name_et" />

    <EditText
        android:id="@+id/register_password_et"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_et" />

    <Button
        android:id="@+id/register_register_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doRegister"
        android:text="@string/main_register"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/register_password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>